Fix carousel h5 text-align center

--- a/styles/_carousel.scss
+++ b/styles/_carousel.scss
@@ -27,6 +27,7 @@
     h5 {
         font-family: $josefin;
         color: white;
+        text-align: center;
     }
 
     p:last-of-type {
