--- a/styles/main.css
+++ b/styles/main.css
@@ -64,6 +64,7 @@ header li {
 .carousel h5 {
   font-family: "Josefin Sans", sans-serif;
   color: white;
+  text-align: center;
 }
 .carousel p:last-of-type {
   color: white;
